# MLOPS-MangoDB-Package

./: README.md  requirements.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
src/mongodb_connect/: mongo_crud.py
