[metadata]
name = mongodb_connect
version = 0.0.4
author = akinolanath5519
author_email = akinolanathaniel3026@gmail.com
description = A python package for connecting with MongoDB database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akinolanath5519/MlopsMangoDBpackage
project_urls =
    Bug Tracker = https://github.com/akinolanath5519/MlopsMangoDBpackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    tox
    flake8
